# Kahypar_c

./: CMakeLists.txt  build.sh  libkahypar.h  main.cpp
config/: cut_kKaHyPar_sea20.hpp
